// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Fabric renders a Fabric component correctly 1`] = `
<div
  className=
      ms-Fabric
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        color: #323130;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 400;
      }
      & button {
        font-family: inherit;
      }
      & input {
        font-family: inherit;
      }
      & textarea {
        font-family: inherit;
      }
>
  test
</div>
`;

exports[`Fabric renders a Fabric component in RTL and LTR theme 1`] = `
<div>
  <div
    className=
        ms-Fabric
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          color: #323130;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 400;
        }
        & button {
          font-family: inherit;
        }
        & input {
          font-family: inherit;
        }
        & textarea {
          font-family: inherit;
        }
    dir="ltr"
  >
    <div
      className="ms-Checkbox is-enabled"
    >
      <input
        aria-checked="false"
        aria-label="I am in ltr"
        checked={false}
        data-ktp-execute-target={true}
        id="checkbox-0"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        className="ms-Checkbox-label"
        htmlFor="checkbox-0"
      >
        <div
          className="ms-Checkbox-checkbox"
          data-ktp-target={true}
        >
          <span
            aria-hidden={true}
            className="ms-Checkbox-checkmark"
            role="presentation"
            style={Object {}}
          >
            <svg
              viewBox="0 0 2048 2048"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M1837 557L768 1627l-557-558 90-90 467 466 979-978 90 90z"
              />
            </svg>
          </span>
        </div>
        <span
          aria-hidden="true"
          className="ms-Checkbox-text"
        >
          I am in ltr
        </span>
      </label>
    </div>
    <div
      className=
          ms-Fabric
          {
            -moz-osx-font-smoothing: grayscale;
            -webkit-font-smoothing: antialiased;
            color: #323130;
            font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
            font-size: 14px;
            font-weight: 400;
          }
          & button {
            font-family: inherit;
          }
          & input {
            font-family: inherit;
          }
          & textarea {
            font-family: inherit;
          }
      dir="rtl"
    >
      <div
        className="ms-Checkbox is-enabled"
      >
        <input
          aria-checked="false"
          aria-label="I am in rtl, inside of ltr"
          checked={false}
          data-ktp-execute-target={true}
          id="checkbox-1"
          onChange={[Function]}
          type="checkbox"
        />
        <label
          className="ms-Checkbox-label"
          htmlFor="checkbox-1"
        >
          <div
            className="ms-Checkbox-checkbox"
            data-ktp-target={true}
          >
            <span
              aria-hidden={true}
              className="ms-Checkbox-checkmark"
              role="presentation"
              style={Object {}}
            >
              <svg
                viewBox="0 0 2048 2048"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M1837 557L768 1627l-557-558 90-90 467 466 979-978 90 90z"
                />
              </svg>
            </span>
          </div>
          <span
            aria-hidden="true"
            className="ms-Checkbox-text"
          >
            I am in rtl, inside of ltr
          </span>
        </label>
      </div>
      <div
        className=
            ms-Fabric
            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              color: #323130;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 14px;
              font-weight: 400;
            }
            & button {
              font-family: inherit;
            }
            & input {
              font-family: inherit;
            }
            & textarea {
              font-family: inherit;
            }
        dir="ltr"
      >
        <div
          className="ms-Checkbox is-enabled"
        >
          <input
            aria-checked="false"
            aria-label="I am in ltr, inside of rtl, inside of ltr"
            checked={false}
            data-ktp-execute-target={true}
            id="checkbox-2"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            className="ms-Checkbox-label"
            htmlFor="checkbox-2"
          >
            <div
              className="ms-Checkbox-checkbox"
              data-ktp-target={true}
            >
              <span
                aria-hidden={true}
                className="ms-Checkbox-checkmark"
                role="presentation"
                style={Object {}}
              >
                <svg
                  viewBox="0 0 2048 2048"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M1837 557L768 1627l-557-558 90-90 467 466 979-978 90 90z"
                  />
                </svg>
              </span>
            </div>
            <span
              aria-hidden="true"
              className="ms-Checkbox-text"
            >
              I am in ltr, inside of rtl, inside of ltr
            </span>
          </label>
        </div>
      </div>
    </div>
  </div>
  <div
    className=
        ms-Fabric
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          color: #323130;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 400;
        }
        & button {
          font-family: inherit;
        }
        & input {
          font-family: inherit;
        }
        & textarea {
          font-family: inherit;
        }
    dir="rtl"
  >
    <div
      className="ms-Checkbox is-enabled"
    >
      <input
        aria-checked="false"
        aria-label="I am in rtl"
        checked={false}
        data-ktp-execute-target={true}
        id="checkbox-3"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        className="ms-Checkbox-label"
        htmlFor="checkbox-3"
      >
        <div
          className="ms-Checkbox-checkbox"
          data-ktp-target={true}
        >
          <span
            aria-hidden={true}
            className="ms-Checkbox-checkmark"
            role="presentation"
            style={Object {}}
          >
            <svg
              viewBox="0 0 2048 2048"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M1837 557L768 1627l-557-558 90-90 467 466 979-978 90 90z"
              />
            </svg>
          </span>
        </div>
        <span
          aria-hidden="true"
          className="ms-Checkbox-text"
        >
          I am in rtl
        </span>
      </label>
    </div>
    <div
      className=
          ms-Fabric
          {
            -moz-osx-font-smoothing: grayscale;
            -webkit-font-smoothing: antialiased;
            color: #323130;
            font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
            font-size: 14px;
            font-weight: 400;
          }
          & button {
            font-family: inherit;
          }
          & input {
            font-family: inherit;
          }
          & textarea {
            font-family: inherit;
          }
      dir="ltr"
    >
      <div
        className="ms-Checkbox is-enabled"
      >
        <input
          aria-checked="false"
          aria-label="I am in ltr, inside of rtl"
          checked={false}
          data-ktp-execute-target={true}
          id="checkbox-4"
          onChange={[Function]}
          type="checkbox"
        />
        <label
          className="ms-Checkbox-label"
          htmlFor="checkbox-4"
        >
          <div
            className="ms-Checkbox-checkbox"
            data-ktp-target={true}
          >
            <span
              aria-hidden={true}
              className="ms-Checkbox-checkmark"
              role="presentation"
              style={Object {}}
            >
              <svg
                viewBox="0 0 2048 2048"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M1837 557L768 1627l-557-558 90-90 467 466 979-978 90 90z"
                />
              </svg>
            </span>
          </div>
          <span
            aria-hidden="true"
            className="ms-Checkbox-text"
          >
            I am in ltr, inside of rtl
          </span>
        </label>
      </div>
      <div
        className=
            ms-Fabric
            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              color: #323130;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 14px;
              font-weight: 400;
            }
            & button {
              font-family: inherit;
            }
            & input {
              font-family: inherit;
            }
            & textarea {
              font-family: inherit;
            }
        dir="rtl"
      >
        <div
          className="ms-Checkbox is-enabled"
        >
          <input
            aria-checked="false"
            aria-label="I am in rtl, inside of rtl, inside of rtl"
            checked={false}
            data-ktp-execute-target={true}
            id="checkbox-5"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            className="ms-Checkbox-label"
            htmlFor="checkbox-5"
          >
            <div
              className="ms-Checkbox-checkbox"
              data-ktp-target={true}
            >
              <span
                aria-hidden={true}
                className="ms-Checkbox-checkmark"
                role="presentation"
                style={Object {}}
              >
                <svg
                  viewBox="0 0 2048 2048"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M1837 557L768 1627l-557-558 90-90 467 466 979-978 90 90z"
                  />
                </svg>
              </span>
            </div>
            <span
              aria-hidden="true"
              className="ms-Checkbox-text"
            >
              I am in rtl, inside of rtl, inside of rtl
            </span>
          </label>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Fabric renders a Fabric component in RTL and LTR theme 2`] = `
<div>
  <div
    className=
        ms-Fabric
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          color: #323130;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 400;
        }
        & button {
          font-family: inherit;
        }
        & input {
          font-family: inherit;
        }
        & textarea {
          font-family: inherit;
        }
    dir="ltr"
  >
    <div
      className="ms-Checkbox is-enabled"
    >
      <input
        aria-checked="false"
        aria-label="I am in ltr"
        checked={false}
        data-ktp-execute-target={true}
        id="checkbox-6"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        className="ms-Checkbox-label"
        htmlFor="checkbox-6"
      >
        <div
          className="ms-Checkbox-checkbox"
          data-ktp-target={true}
        >
          <span
            aria-hidden={true}
            className="ms-Checkbox-checkmark"
            role="presentation"
            style={Object {}}
          >
            <svg
              viewBox="0 0 2048 2048"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M1837 557L768 1627l-557-558 90-90 467 466 979-978 90 90z"
              />
            </svg>
          </span>
        </div>
        <span
          aria-hidden="true"
          className="ms-Checkbox-text"
        >
          I am in ltr
        </span>
      </label>
    </div>
    <div
      className=
          ms-Fabric
          {
            -moz-osx-font-smoothing: grayscale;
            -webkit-font-smoothing: antialiased;
            color: #323130;
            font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
            font-size: 14px;
            font-weight: 400;
          }
          & button {
            font-family: inherit;
          }
          & input {
            font-family: inherit;
          }
          & textarea {
            font-family: inherit;
          }
      dir="rtl"
    >
      <div
        className="ms-Checkbox is-enabled"
      >
        <input
          aria-checked="false"
          aria-label="I am in rtl, inside of ltr"
          checked={false}
          data-ktp-execute-target={true}
          id="checkbox-7"
          onChange={[Function]}
          type="checkbox"
        />
        <label
          className="ms-Checkbox-label"
          htmlFor="checkbox-7"
        >
          <div
            className="ms-Checkbox-checkbox"
            data-ktp-target={true}
          >
            <span
              aria-hidden={true}
              className="ms-Checkbox-checkmark"
              role="presentation"
              style={Object {}}
            >
              <svg
                viewBox="0 0 2048 2048"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M1837 557L768 1627l-557-558 90-90 467 466 979-978 90 90z"
                />
              </svg>
            </span>
          </div>
          <span
            aria-hidden="true"
            className="ms-Checkbox-text"
          >
            I am in rtl, inside of ltr
          </span>
        </label>
      </div>
      <div
        className=
            ms-Fabric
            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              color: #323130;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 14px;
              font-weight: 400;
            }
            & button {
              font-family: inherit;
            }
            & input {
              font-family: inherit;
            }
            & textarea {
              font-family: inherit;
            }
        dir="ltr"
      >
        <div
          className="ms-Checkbox is-enabled"
        >
          <input
            aria-checked="false"
            aria-label="I am in ltr, inside of rtl, inside of ltr"
            checked={false}
            data-ktp-execute-target={true}
            id="checkbox-8"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            className="ms-Checkbox-label"
            htmlFor="checkbox-8"
          >
            <div
              className="ms-Checkbox-checkbox"
              data-ktp-target={true}
            >
              <span
                aria-hidden={true}
                className="ms-Checkbox-checkmark"
                role="presentation"
                style={Object {}}
              >
                <svg
                  viewBox="0 0 2048 2048"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M1837 557L768 1627l-557-558 90-90 467 466 979-978 90 90z"
                  />
                </svg>
              </span>
            </div>
            <span
              aria-hidden="true"
              className="ms-Checkbox-text"
            >
              I am in ltr, inside of rtl, inside of ltr
            </span>
          </label>
        </div>
      </div>
    </div>
  </div>
  <div
    className=
        ms-Fabric
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          color: #323130;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 400;
        }
        & button {
          font-family: inherit;
        }
        & input {
          font-family: inherit;
        }
        & textarea {
          font-family: inherit;
        }
    dir="rtl"
  >
    <div
      className="ms-Checkbox is-enabled"
    >
      <input
        aria-checked="false"
        aria-label="I am in rtl"
        checked={false}
        data-ktp-execute-target={true}
        id="checkbox-9"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        className="ms-Checkbox-label"
        htmlFor="checkbox-9"
      >
        <div
          className="ms-Checkbox-checkbox"
          data-ktp-target={true}
        >
          <span
            aria-hidden={true}
            className="ms-Checkbox-checkmark"
            role="presentation"
            style={Object {}}
          >
            <svg
              viewBox="0 0 2048 2048"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M1837 557L768 1627l-557-558 90-90 467 466 979-978 90 90z"
              />
            </svg>
          </span>
        </div>
        <span
          aria-hidden="true"
          className="ms-Checkbox-text"
        >
          I am in rtl
        </span>
      </label>
    </div>
    <div
      className=
          ms-Fabric
          {
            -moz-osx-font-smoothing: grayscale;
            -webkit-font-smoothing: antialiased;
            color: #323130;
            font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
            font-size: 14px;
            font-weight: 400;
          }
          & button {
            font-family: inherit;
          }
          & input {
            font-family: inherit;
          }
          & textarea {
            font-family: inherit;
          }
      dir="ltr"
    >
      <div
        className="ms-Checkbox is-enabled"
      >
        <input
          aria-checked="false"
          aria-label="I am in ltr, inside of rtl"
          checked={false}
          data-ktp-execute-target={true}
          id="checkbox-10"
          onChange={[Function]}
          type="checkbox"
        />
        <label
          className="ms-Checkbox-label"
          htmlFor="checkbox-10"
        >
          <div
            className="ms-Checkbox-checkbox"
            data-ktp-target={true}
          >
            <span
              aria-hidden={true}
              className="ms-Checkbox-checkmark"
              role="presentation"
              style={Object {}}
            >
              <svg
                viewBox="0 0 2048 2048"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M1837 557L768 1627l-557-558 90-90 467 466 979-978 90 90z"
                />
              </svg>
            </span>
          </div>
          <span
            aria-hidden="true"
            className="ms-Checkbox-text"
          >
            I am in ltr, inside of rtl
          </span>
        </label>
      </div>
      <div
        className=
            ms-Fabric
            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              color: #323130;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 14px;
              font-weight: 400;
            }
            & button {
              font-family: inherit;
            }
            & input {
              font-family: inherit;
            }
            & textarea {
              font-family: inherit;
            }
        dir="rtl"
      >
        <div
          className="ms-Checkbox is-enabled"
        >
          <input
            aria-checked="false"
            aria-label="I am in rtl, inside of rtl, inside of rtl"
            checked={false}
            data-ktp-execute-target={true}
            id="checkbox-11"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            className="ms-Checkbox-label"
            htmlFor="checkbox-11"
          >
            <div
              className="ms-Checkbox-checkbox"
              data-ktp-target={true}
            >
              <span
                aria-hidden={true}
                className="ms-Checkbox-checkmark"
                role="presentation"
                style={Object {}}
              >
                <svg
                  viewBox="0 0 2048 2048"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M1837 557L768 1627l-557-558 90-90 467 466 979-978 90 90z"
                  />
                </svg>
              </span>
            </div>
            <span
              aria-hidden="true"
              className="ms-Checkbox-text"
            >
              I am in rtl, inside of rtl, inside of rtl
            </span>
          </label>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Fabric renders a Fabric component in RTL and LTR theme 3`] = `
<div>
  <div
    className=
        ms-Fabric
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          color: #323130;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 400;
        }
        & button {
          font-family: inherit;
        }
        & input {
          font-family: inherit;
        }
        & textarea {
          font-family: inherit;
        }
    dir="ltr"
  >
    <div
      className="ms-Checkbox is-enabled"
    >
      <input
        aria-checked="false"
        aria-label="I am in ltr"
        checked={false}
        data-ktp-execute-target={true}
        id="checkbox-12"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        className="ms-Checkbox-label"
        htmlFor="checkbox-12"
      >
        <div
          className="ms-Checkbox-checkbox"
          data-ktp-target={true}
        >
          <span
            aria-hidden={true}
            className="ms-Checkbox-checkmark"
            role="presentation"
            style={Object {}}
          >
            <svg
              viewBox="0 0 2048 2048"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M1837 557L768 1627l-557-558 90-90 467 466 979-978 90 90z"
              />
            </svg>
          </span>
        </div>
        <span
          aria-hidden="true"
          className="ms-Checkbox-text"
        >
          I am in ltr
        </span>
      </label>
    </div>
    <div
      className=
          ms-Fabric
          {
            -moz-osx-font-smoothing: grayscale;
            -webkit-font-smoothing: antialiased;
            color: #323130;
            font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
            font-size: 14px;
            font-weight: 400;
          }
          & button {
            font-family: inherit;
          }
          & input {
            font-family: inherit;
          }
          & textarea {
            font-family: inherit;
          }
      dir="rtl"
    >
      <div
        className="ms-Checkbox is-enabled"
      >
        <input
          aria-checked="false"
          aria-label="I am in rtl, inside of ltr"
          checked={false}
          data-ktp-execute-target={true}
          id="checkbox-13"
          onChange={[Function]}
          type="checkbox"
        />
        <label
          className="ms-Checkbox-label"
          htmlFor="checkbox-13"
        >
          <div
            className="ms-Checkbox-checkbox"
            data-ktp-target={true}
          >
            <span
              aria-hidden={true}
              className="ms-Checkbox-checkmark"
              role="presentation"
              style={Object {}}
            >
              <svg
                viewBox="0 0 2048 2048"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M1837 557L768 1627l-557-558 90-90 467 466 979-978 90 90z"
                />
              </svg>
            </span>
          </div>
          <span
            aria-hidden="true"
            className="ms-Checkbox-text"
          >
            I am in rtl, inside of ltr
          </span>
        </label>
      </div>
      <div
        className=
            ms-Fabric
            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              color: #323130;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 14px;
              font-weight: 400;
            }
            & button {
              font-family: inherit;
            }
            & input {
              font-family: inherit;
            }
            & textarea {
              font-family: inherit;
            }
        dir="ltr"
      >
        <div
          className="ms-Checkbox is-enabled"
        >
          <input
            aria-checked="false"
            aria-label="I am in ltr, inside of rtl, inside of ltr"
            checked={false}
            data-ktp-execute-target={true}
            id="checkbox-14"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            className="ms-Checkbox-label"
            htmlFor="checkbox-14"
          >
            <div
              className="ms-Checkbox-checkbox"
              data-ktp-target={true}
            >
              <span
                aria-hidden={true}
                className="ms-Checkbox-checkmark"
                role="presentation"
                style={Object {}}
              >
                <svg
                  viewBox="0 0 2048 2048"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M1837 557L768 1627l-557-558 90-90 467 466 979-978 90 90z"
                  />
                </svg>
              </span>
            </div>
            <span
              aria-hidden="true"
              className="ms-Checkbox-text"
            >
              I am in ltr, inside of rtl, inside of ltr
            </span>
          </label>
        </div>
      </div>
    </div>
  </div>
  <div
    className=
        ms-Fabric
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          color: #323130;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 400;
        }
        & button {
          font-family: inherit;
        }
        & input {
          font-family: inherit;
        }
        & textarea {
          font-family: inherit;
        }
    dir="rtl"
  >
    <div
      className="ms-Checkbox is-enabled"
    >
      <input
        aria-checked="false"
        aria-label="I am in rtl"
        checked={false}
        data-ktp-execute-target={true}
        id="checkbox-15"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        className="ms-Checkbox-label"
        htmlFor="checkbox-15"
      >
        <div
          className="ms-Checkbox-checkbox"
          data-ktp-target={true}
        >
          <span
            aria-hidden={true}
            className="ms-Checkbox-checkmark"
            role="presentation"
            style={Object {}}
          >
            <svg
              viewBox="0 0 2048 2048"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M1837 557L768 1627l-557-558 90-90 467 466 979-978 90 90z"
              />
            </svg>
          </span>
        </div>
        <span
          aria-hidden="true"
          className="ms-Checkbox-text"
        >
          I am in rtl
        </span>
      </label>
    </div>
    <div
      className=
          ms-Fabric
          {
            -moz-osx-font-smoothing: grayscale;
            -webkit-font-smoothing: antialiased;
            color: #323130;
            font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
            font-size: 14px;
            font-weight: 400;
          }
          & button {
            font-family: inherit;
          }
          & input {
            font-family: inherit;
          }
          & textarea {
            font-family: inherit;
          }
      dir="ltr"
    >
      <div
        className="ms-Checkbox is-enabled"
      >
        <input
          aria-checked="false"
          aria-label="I am in ltr, inside of rtl"
          checked={false}
          data-ktp-execute-target={true}
          id="checkbox-16"
          onChange={[Function]}
          type="checkbox"
        />
        <label
          className="ms-Checkbox-label"
          htmlFor="checkbox-16"
        >
          <div
            className="ms-Checkbox-checkbox"
            data-ktp-target={true}
          >
            <span
              aria-hidden={true}
              className="ms-Checkbox-checkmark"
              role="presentation"
              style={Object {}}
            >
              <svg
                viewBox="0 0 2048 2048"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M1837 557L768 1627l-557-558 90-90 467 466 979-978 90 90z"
                />
              </svg>
            </span>
          </div>
          <span
            aria-hidden="true"
            className="ms-Checkbox-text"
          >
            I am in ltr, inside of rtl
          </span>
        </label>
      </div>
      <div
        className=
            ms-Fabric
            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              color: #323130;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 14px;
              font-weight: 400;
            }
            & button {
              font-family: inherit;
            }
            & input {
              font-family: inherit;
            }
            & textarea {
              font-family: inherit;
            }
        dir="rtl"
      >
        <div
          className="ms-Checkbox is-enabled"
        >
          <input
            aria-checked="false"
            aria-label="I am in rtl, inside of rtl, inside of rtl"
            checked={false}
            data-ktp-execute-target={true}
            id="checkbox-17"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            className="ms-Checkbox-label"
            htmlFor="checkbox-17"
          >
            <div
              className="ms-Checkbox-checkbox"
              data-ktp-target={true}
            >
              <span
                aria-hidden={true}
                className="ms-Checkbox-checkmark"
                role="presentation"
                style={Object {}}
              >
                <svg
                  viewBox="0 0 2048 2048"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M1837 557L768 1627l-557-558 90-90 467 466 979-978 90 90z"
                  />
                </svg>
              </span>
            </div>
            <span
              aria-hidden="true"
              className="ms-Checkbox-text"
            >
              I am in rtl, inside of rtl, inside of rtl
            </span>
          </label>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Fabric renders a Fabric component with applyTheme correctly 1`] = `
<div
  className=
      ms-Fabric
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        background-color: #ffffff;
        color: #323130;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 400;
      }
      & button {
        font-family: inherit;
      }
      & input {
        font-family: inherit;
      }
      & textarea {
        font-family: inherit;
      }
>
  test
</div>
`;

exports[`Fabric renders as a span using the "as" prop 1`] = `
<span
  className=
      ms-Fabric
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        color: #323130;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 400;
      }
      & button {
        font-family: inherit;
      }
      & input {
        font-family: inherit;
      }
      & textarea {
        font-family: inherit;
      }
/>
`;
